--- a/LetsGoal/client/capstone-lets-goal/src/index.css
+++ b/LetsGoal/client/capstone-lets-goal/src/index.css
@@ -1,5 +1,6 @@
 @import "goal/goal.css";
 @import "auth/auth.css";
+@import "action/action.css";
 
 body {
   margin: 0;
@@ -13,4 +14,24 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.navbar {
+  color: white !important;
+  background-color: rgb(97, 12, 12) !important;
+}
+nav {
+  margin-bottom: 1rem;
+}
+.nav-link{
+  color: rgb(207, 207, 207) !important;
+}
+.navbar-light .nav-item.active .nav-link,
+.navbar-light .nav-item .nav-link:active,
+.navbar-light .nav-item .nav-link:focus,
+.navbar-light .nav-item:hover .nav-link {
+    color: white !important;
+}
+.navbar-brand {
+  color: white !important;
 }
