--- a/LetsGoal/client/capstone-lets-goal/src/action/action.css
+++ b/LetsGoal/client/capstone-lets-goal/src/action/action.css
@@ -1,4 +1,30 @@
 .actionList {
     border: solid thin black;
+    border-radius: 5px;
     padding: 10px;
+    min-height: 45rem;
+}
+
+.actionList_btns {
+    display: flex;
+    justify-content: space-between;
+}
+
+.actionList_displayActions {
+    display: flex;
+    flex-wrap: wrap;
+    flex-basis: 100%;
+    justify-content: space-evenly;
+}
+
+.action {
+    border-radius: 3px;
+    padding: 2rem;
+    max-width: 40%;
+    min-width: 40%;
+    margin: 1rem;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    border: solid thin black;
 }
