--- a/LetsGoal/client/capstone-lets-goal/src/goal/goal.css
+++ b/LetsGoal/client/capstone-lets-goal/src/goal/goal.css
@@ -62,8 +62,21 @@
         padding: 10px;
     }
 
-    .form-group {
-        min-width: 90%;
+    .editGoalForm {
+        min-width: 60%;
+        align-content: center;
+        border: solid thin black;
+        border-radius: 10px;
+        margin: 1rem;
+        padding: 1rem;
+    }
+
+    .setBtnWidth {
+        min-width: 20%;
+    }
+
+    .editGoalLabel {
+        width: 100%;
     }
 
     .goalForm_btns {
@@ -77,22 +90,38 @@
 
     .userGoalDetails {
         display: flex;
-        justify-content: space-evenly;
-        min-width: 100%;
+        border-radius: 10px;
+        padding: 1rem;
+        margin: 1rem;
+        border: solid black thin;
+        justify-content: space-between;
+        min-width: 98%;
     }
 
     .userGoalDetails_items {
-        width: 50%;
+        width: 45%;
     }
 
     .userGoalDetails_actions {
-        width: 50%;
+        width: 45%;
+    }
+
+    .completeGoalBtn {
+        margin-left: 2rem;
     }
 
      .userGoalDetails_btns {
         display: flex;
         justify-content: space-between;
         margin-bottom: 1rem;
+        padding-left: 1rem;
+        padding-right: 1rem;
+    }
+
+    .setWidth {
+        display: flex;
+        min-width: 30%;
+        justify-content: center;
     }
 
     .goal-EditDelete-btns {
@@ -102,11 +131,11 @@
     }
 
     .userGoalDetails_specs {
-        border: solid thin black;
         padding: 10px;
+        min-height: 100%;
     }
 
-    .isCompleteGoalBtn {
+    .isComplete-Edit-GoalBtn {
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
     }
