Finished with the styling that I am gonna do for today.

--- a/LetsGoal/client/capstone-lets-goal/src/action/action.css
+++ b/LetsGoal/client/capstone-lets-goal/src/action/action.css
@@ -10,6 +10,11 @@
     justify-content: space-between;
 }
 
+.actionForm_btns {
+    display: flex;
+    justify-content: space-evenly;
+}
+
 .actionList_displayActions {
     display: flex;
     flex-wrap: wrap;
@@ -27,4 +32,44 @@
     flex-direction: column;
     text-align: center;
     border: solid thin black;
+}
+
+.actionDetails {
+    border: solid thin black;
+    border-radius: 5px;
+    padding: 10px;
+    min-height: 40rem;
+}
+
+.actionLink {
+    display: flex;
+    justify-content: space-between;
+}
+
+.actionLink_btns {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.editActionForm {
+    min-width: 60%;
+    align-content: center;
+    border: solid thin black;
+    border-radius: 10px;
+    margin: 1rem;
+    padding: 1rem;
+}
+
+.editActionLabel {
+    width: 100%;
+}
+
+.newActionForm {
+    min-width: 60%;
+    min-height: 40rem;
+    align-content: center;
+    border: solid thin black;
+    border-radius: 10px;
+    margin: 1rem;
+    padding: 10px;
 }
